Fixed layout bugs

--- a/src/main/less/vcomet/ui/vc-layout/vc-layout.less
+++ b/src/main/less/vcomet/ui/vc-layout/vc-layout.less
@@ -34,10 +34,10 @@
     justify-content: center;
   }
   &.@{element}-justifiedSpaceBetween{
-    justify-content: center;
+    justify-content: space-between;
   }
   &.@{element}-justifiedSpaceAround{
-    justify-content: center;
+    justify-content: space-around;
   }
   /*
     Children vertical alignment and spacing
